--- a/index.html
+++ b/index.html
@@ -1,22 +1,142 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Name       : Undeviating 
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20140322
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>Kerry Harp</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="https://fonts.googleapis.com/css?family=Mukta+Mahee" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Barklow">
+
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
 </head>
-
 <body>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+        	<!-- <span class="icon icon-cog"></span> -->
+			<img src="images/HD20_gray.png" alt="Harp Design, Inc." width="72" height="72">
+			<h1><a href="#">Kerry Harp</a></h1>
+			<h6><a href="#">LEED AP BD+C, WELL AP, Fitwel Ambassador</a></h6>
+		</div>
+		<div id="menu">
+			<ul>
+				<li class="active"><a href="#" accesskey="1" title="Home">Home</a></li>
+				<li><a href="about.html" accesskey="2" title="About">About</a></li>
+				<li><a href="projects.html" accesskey="3" title="Projects">Projects </a></li>
+				<li><a href="contact.html" accesskey="4" title="Contact">Contact</a></li>
+				<!-- <li><a href="#" accesskey="4" title="">Empty</a></li> -->
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="wrapper">
+	<div id="welcome" class="container">
+    	
+<div class="title">
+	  <h2>Visualizing A Sustainable World</h2>
+		</div>
+		<p>Visualization and data analyst with 20+ years of experience working in the areas of sustainability in the built environment and the health/wellbeing building occupants. With degrees in architecture and accreditations in LEED and WELL, my value is being a bridge between the technical and design fields to promote and deploy resilient, sustainability, and wellbeing strategies.</p>
+	</div>
 
-  <h2>Kerry Harp, LEED AP BD+C, WELL AP, Fitwel Ambassador</h2>
-  <p>
-  Sustainability consultant specializing in energy efficiency and occupancy wellness.
-  </p>
-
-  <p>
-  Visualization and data analyst with 20+ years of experience working in the areas of sustainability in the built environment and the health/wellbeing building occupants. With degrees in architecture and accreditations in LEED and WELL, my value is being a bridge between the technical and design fields to promote and deploy resilient, sustainability, and wellbeing strategies.
-  </p>
-
-  <img src="IMG_2191.jpg" width=250 alt="Kerry Harp"
-
+	<div id="three-column" class="container">
+		<div><span class="arrow-down"></span></div>
+		<div id="tbox1">
+			<div class="title">
+				<!-- <h2>About Kerry</h2> -->
+			</div>
+			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
+			<a href="about.html" class="button">About Kerry</a> </div>
+		<div id="tbox2">
+			<div class="title">
+				<!-- <h2>Projects</h2> -->
+			</div>
+			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
+			<a href="projects.html" class="button">Projects</a> </div>
+		<div id="tbox3">
+			<div class="title">
+				<!-- <h2>Contact Kerry</h2> -->
+			</div>
+			<p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
+			<a href="contact.html" class="button">Contact Kerry</a> </div>
+	</div>
+ 	<div id="portfolio" class="container">
+		<div class="column1">
+			<div class="box">
+			<img src="images/IMG_3171.jpg" alt="IMG_3171" width="282" height="282">
+			  <!-- <h3>Vestibulum venenatis</h3> 
+			<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+		   <a href="#" class="button button-small">Etiam posuere</a> -->
+		   </div>
+		</div>
+		<div class="column2">
+			<div class="box">
+			<img src="images/Untitled-1.png" alt="Untitled-1" width="282" height="282">
+			 <!--  <h3>Praesent scelerisque</h3>
+			<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+		   <a href="#" class="button button-small">Etiam posuere</a>--> 
+		   </div>
+		</div>
+		<div class="column3">
+			<div class="box">
+				<img src="images/IMG_2853.jpg" alt="IMG_2853" width="282" height="282">
+			  <!-- <h3>Donec dictum metus</h3> 
+			<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+		   <a href="#" class="button button-small">Etiam posuere</a> -->
+		   </div>
+		</div>
+		<div class="column4">
+			<div class="box">
+				<img src="images/IMG_2191.jpg" alt="IMG_2191" width="282" height="282">
+			  <!-- <h3>Mauris vulputate dolor</h3>
+			<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+		   <a href="#" class="button button-small">Etiam posuere</a>--> 
+		   </div>
+		</div>
+	</div>
+</div>
+<!--<div id="footer">
+	<div class="container">
+		<div class="fbox1">
+		<span class="icon icon-map-marker"></span>
+			<span>Minneapolis / St. Paul Metro Area</span>
+		</div>
+		<div class="fbox1">
+			<span class="icon icon-phone"></span>
+			<span>
+				Telephone: +1 800 123 4657
+			</span>
+		</div>
+		<div class="fbox1">
+			<span class="icon icon-envelope"></span>
+			<span>kharp@umn.edu</span>
+		</div>
+	</div>
+</div>-->
+<div id="copyright">
+	<p>&copy; 2021 Harp Design, Inc. All rights reserved.</p>
+	<ul class="contact">
+		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
+		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
+		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
+		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+	</ul>
+</div>
 </body>
 </html>
