fixed social media in footer

--- a/index.html
+++ b/index.html
@@ -131,11 +131,10 @@ Released   : 20140322
 <div id="copyright">
 	<p>&copy; 2021 Harp Design, Inc. All rights reserved.</p>
 	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+		<li><a href="mailto:kharp@umn.edu" class="icon icon-envelope"><span>Email</span></a></li>
+		<li><a href="https://www.linkedin.com/in/kerryhaglund/" class="icon icon-linkedin"><span></span></a></li>
+		<li><a href="https://twitter.com/design_harp" class="icon icon-twitter"><span>Twitter</span></a></li>
+		<li><a href="https://www.facebook.com/HarpDesignInc" class="icon icon-facebook"><span></span></a></li>
 	</ul>
 </div>
 </body>
