correct upload to github web for dashboard

--- a/Visualization_Dashboard/compare.html
+++ b/Visualization_Dashboard/compare.html
@@ -44,10 +44,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="data.html">Data</a></li>
          <!-- <li><a href="services.html">Services</a></li>-->
-          <li><a href="compare.html">Compare</a></li>
+          <li><a  class="active" href="compare.html">Compare</a></li>
          <!-- <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>-->
           <li class="dropdown"><a href="#"><span>Plots</span> <i class="bi bi-chevron-down"></i></a>
@@ -110,9 +110,9 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-          <div class="col-lg-3 col-md-6 portfolio-wrap filter-temp">
+          <div class=" col-lg-6 col-md-6 col-md-6 portfolio-wrap filter-temp">
             <div class="portfolio-item">
-              <img src="assets/img/LatTemp.png" class="img-fluid" alt="LatTemp" width="temperature">
+              <p align="center"><img src="assets/img/LatTemp.png" class="img-fluid" alt="temperature"></p>
               <div class="portfolio-info">
                 <h3>Temperature</h3>
                 <div>
@@ -123,9 +123,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-wrap filter-humid">
+          <div class="col-lg-6 col-md-6 portfolio-wrap filter-humid">
             <div class="portfolio-item">
-              <img src="assets/img/LatHum.png" class="img-fluid" alt="humidity">
+              <p align="center"><img src="assets/img/LatHum.png" class="img-fluid" alt="humidity"></p>
               <div class="portfolio-info">
                 <h3>Humidity</h3>
                 <div>
@@ -136,9 +136,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-wrap filter-cloud">
+          <div class="col-lg-6 col-md-6 portfolio-wrap filter-cloud">
             <div class="portfolio-item">
-              <img src="assets/img/LatCloud.png" class="img-fluid" alt="cloud cover">
+              <p align="center"><img src="assets/img/LatCloud.png" class="img-fluid" alt="cloud cover"></p>
               <div class="portfolio-info">
                 <h3>Cloud Cover</h3>
                 <div>
@@ -149,9 +149,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-wrap filter-wind">
+          <div class="col-lg-6 col-md-6 portfolio-wrap filter-wind">
             <div class="portfolio-item">
-              <img src="assets/img/LatWind.png" class="img-fluid" alt="wind speed">
+              <p align="center"><img src="assets/img/LatWind.png" class="img-fluid" alt="wind speed"></p>
               <div class="portfolio-info">
                 <h3>Wind Speed</h3>
                 <div>
@@ -202,7 +202,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="visualize.html">Visualize</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data.html">Data</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="compare.html">Compare</a></li>
               <!--<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
             </ul>
@@ -226,12 +226,11 @@
               <strong>Phone:</strong> +1 651.283.8601<br>
               <strong>Email:</strong> kharp@umn.edu<br>
             </p>-->
-
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Harp Design, Inc.</h3>
-            <p>Visualizing sustainability. Harp Design provides consulting services in the areas of sustainability and energy-efficiency.</p>
+            <h2>Harp Design, Inc.</h2>
+            <h3>Visualizing Sustainability</h3>
             <div class="social-links mt-3">
               <a href="https://www.linkedin.com/in/kerryhaglund/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
              <a href="https://twitter.com/design_harp" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -247,7 +246,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Harp Design, Inc.</span></strong>. All Rights Reserved
+       &copy; 2021 <strong><span>Harp Design, Inc.</span></strong> All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
