--- a/Visualization_Dashboard/index.html
+++ b/Visualization_Dashboard/index.html
@@ -88,7 +88,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">WELCOME <br/>Weather Visualization Dashboard</h2>
+          <h2 class="animate__animated animate__fadeInDown">WELCOME <br />Weather Visualization Dashboard</h2>
           <p class="animate__animated animate__fadeInUp">Visualize the weather from over 500 cities.</p>
           <a href="about.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
@@ -147,8 +147,8 @@
             <div class="icon-box icon-box-pink">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>-->
              <a href="visualization/temperature.html"><img alt="temperature" src="assets/img/LatTemp.png" class="img-fluid"></a>
-              <h4 class="title"><a href="">Temperature</a></h4>
-              <p class="description">xxx xxxxx xxxx xxxx xxxx xxxxx xxxx xx xxxxx x xxxx xxx xxxx xxx </p>
+              <h4 class="title"><a href="visualization/temperature.html">Temperature</a></h4>
+              <p class="description">Plot showing the relationship between temperature and latitude. </p>
             </div>
           </div>
 
@@ -156,17 +156,17 @@
             <div class="icon-box icon-box-cyan">
               <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
              <a href="visualization/humidity.html"><img alt="humidity" src="assets/img/LatHum.png" class="img-fluid"></a>
-              <h4 class="title"><a href="">Humidity</a></h4>
-              <p class="description">xxx xxxxx xxxx xxxx xxxx xxxxx xxxx xx xxxxx x xxxx xxx xxxx xxx </p>
+              <h4 class="title"><a href="visualization/humidity.html">Humidity</a></h4>
+              <p class="description">Plot showing the relationship between humidity and latitude. </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-green">
              <!--  <div class="icon"><i class="bx bx-tachometer"></i></div> -->
-              <a href="visualization/cloudcover.html"><img alt="cloudiness" src="assets/img/LatCloud.png"  class="img-fluid""></a>
-              <h4 class="title"><a href="">Cloud Cover</a></h4>
-              <p class="description">xxx xxxxx xxxx xxxx xxxx xxxxx xxxx xx xxxxx x xxxx xxx xxxx xxx </p>
+              <a href="visualization/cloudcover.html"><img alt="cloudiness" src="assets/img/LatCloud.png" class="img-fluid"></a>
+              <h4 class="title"><a href="visualization/cloudcover.html">Cloud Cover</a></h4>
+              <p class="description">Plot showing the relationship between cloud cover (cloudiness) and latitude. </p>
             </div>
           </div>
 
@@ -174,8 +174,8 @@
             <div class="icon-box icon-box-blue">
              <!-- <div class="icon"><i class="bx bx-world"></i></div>-->
               <a href="visualization/windspeed.html"><img alt="wind speed" src="assets/img/LatWind.png" class="img-fluid"></a>
-              <h4 class="title"><a href="">Wind Speed</a></h4>
-              <p class="description">xxx xxxxx xxxx xxxx xxxx xxxxx xxxx xx xxxxx x xxxx xxx xxxx xxx </p>
+              <h4 class="title"><a href="visualization/windspeed.html">Wind Speed</a></h4>
+              <p class="description">Plot showing the relationship between wind speed and latitude. </p>
             </div>
           </div>
 
@@ -220,7 +220,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="visualize.html">Visualize</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data.html">Data</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="compare.html">Compare</a></li>
               <!--<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
             </ul>
@@ -244,12 +244,11 @@
               <strong>Phone:</strong> +1 651.283.8601<br>
               <strong>Email:</strong> kharp@umn.edu<br>
             </p>-->
-
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Harp Design, Inc.</h3>
-            <p>Visualizing sustainability. Harp Design provides consulting services in the areas of sustainability and energy-efficiency.</p>
+            <h2>Harp Design, Inc.</h2>
+            <h3>Visualizing Sustainability</h3>
             <div class="social-links mt-3">
              <a href="https://github.com/klharp" class="github" target="_blank"><i class="bx bxl-github"></i></a>
              <a href="https://www.linkedin.com/in/kerryhaglund/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -266,7 +265,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Harp Design, Inc.</span></strong>. All Rights Reserved
+       &copy; 2021 <strong><span>Harp Design, Inc.</span></strong> All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
