--- a/Visualization_Dashboard/about.html
+++ b/Visualization_Dashboard/about.html
@@ -44,15 +44,15 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Home</a></li>
-          <li><a href="visualize.html">Visualize</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="data.html">Data</a></li>
          <!-- <li><a href="services.html">Services</a></li>-->
           <li><a href="compare.html">Compare</a></li>
          <!-- <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>-->
-          <li class="dropdown"><a href="#"><span>Data</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Plots</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Temperature</a></li>
+              <li><a href="visualization/temperature.html">Temperature</a></li>
               <!--<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -62,9 +62,9 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Humidity</a></li>
-              <li><a href="#">Cloud Cover</a></li>
-              <li><a href="#">Wind Speed</a></li>
+              <li><a href="visualization/humidity.html">Humidity</a></li>
+              <li><a href="visualization/cloudcover.html">Cloud Cover</a></li>
+              <li><a href="visualization/windspeed.html">Wind Speed</a></li>
             </ul>
           </li>
          <!-- <li><a href="contact.html">Contact Us</a></li> -->
@@ -77,20 +77,6 @@
 
   <main id="main">
 
-    <!-- ======= About Us Section ======= -->
-    <section class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>About Us</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>About Us</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End About Us Section -->
 
     <!-- ======= About Section ======= -->
     <section class="about" data-aos="fade-up">
@@ -98,172 +84,42 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/IMG_2661.jpg" class="img-fluid" alt="fall in minnesota">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Kerry Harp</h3>
+            <h6> LEED AP BD+C, WELL AP, Fitwel Ambassador</h6>
+             <h6> Harp Design, Inc.</h6>
+             <h6> <a href="mailto:kharp@umn.edu">kharp@umn.edu</a></h6>
+           <p class="font-italic">
+            Sustainability consultant specializing in energy efficiency and occupancy wellness.
+            </p>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
             </p>
+             Over 20 years of experience working in the areas of sustainable design, energy efficiency, and guideline and tool development. Sustainable and resilient design is about systems thinking. More importantly, it is about the people in the built environment—they have to be comfortable, productive and healthy.
+            <p class="font-italic">
+            </p>
+            <p class="font-italic">
+            Currently enrolled in Data Analytics and Visualization Bootcamp offered the the College of Continuing Studies at the University of Minnesota            
+            </p>
+
             <ul>
-              <li><i class="bi bi-check2-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check2-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check2-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check2-circle"></i> Sustainability Analyst</li>
+              <li><i class="bi bi-check2-circle"></i> Consulting services in the area of building/facade energy performance, sustainability, and occupant health and well-being</li>
+              <li><i class="bi bi-check2-circle"></i> Design and visualization services (UI and wayfinding for websites)</li>
+              <li><i class="bi bi-check2-circle"></i> 	Building Simulation and Performance: EnergyPlus, LBNL WINDOW, LBNL THERM</li>
+              <li><i class="bi bi-check2-circle"></i> Design and Visualization: Illustrator, Photoshop, InDesign, ArchiCad, Sketchup</li>
+              <li><i class="bi bi-check2-circle"></i> Python Programming: Python, NumPy, Pandas, Matplotlib, API Interactions</li>
+              <li><i class="bi bi-check2-circle"></i> Databases: Postgres, MySQL, Mongo</li>
+              <li><i class="bi bi-check2-circle"></i> Web Visualization and Design: HTML, CSS, PHP, Bootstrap</li>
+
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section class="facts section-bg" data-aos="fade-up">
-      <div class="container">
-
-        <div class="row counters">
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hard Workers</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
-
-    <!-- ======= Our Skills Section ======= -->
-    <section class="skills" data-aos="fade-up">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Our Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="skills-content">
-
-          <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">HTML <i class="val">100%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">CSS <i class="val">90%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Our Skills Section -->
-
-    <!-- ======= Tetstimonials Section ======= -->
-    <section class="testimonials" data-aos="fade-up">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Tetstimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="testimonials-carousel swiper-container">
-          <div class="swiper-wrapper">
-            <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Ttstimonials Section -->
 
   </main><!-- End #main -->
 
@@ -299,7 +155,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="visualize.html">Visualize</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data.html">Data</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="compare.html">Compare</a></li>
               <!--<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
             </ul>
@@ -323,12 +179,11 @@
               <strong>Phone:</strong> +1 651.283.8601<br>
               <strong>Email:</strong> kharp@umn.edu<br>
             </p>-->
-
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Harp Design, Inc.</h3>
-            <p>Visualizing sustainability. Harp Design provides consulting services in the areas of sustainability and energy-efficiency.</p>
+            <h2>Harp Design, Inc.</h2>
+            <h3>Visualizing Sustainability</h3>
             <div class="social-links mt-3">
              <a href="https://github.com/klharp" class="github" target="_blank"><i class="bx bxl-github"></i></a>
              <a href="https://www.linkedin.com/in/kerryhaglund/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -345,7 +200,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Harp Design, Inc.</span></strong>. All Rights Reserved
+        &copy; 2021 <strong><span>Harp Design, Inc.</span></strong> All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
