final files for visualization directory

--- a/Visualization_Dashboard/compare.html
+++ b/Visualization_Dashboard/compare.html
@@ -32,6 +32,7 @@
 
 <body>
 
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex justify-content-between align-items-center">
@@ -110,13 +111,13 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-          <div class=" col-lg-6 col-md-6 col-md-6 portfolio-wrap filter-temp">
+          <div class=" col-lg-6 col-md-6 portfolio-wrap filter-temp">
             <div class="portfolio-item">
               <p align="center"><img src="assets/img/LatTemp.png" class="img-fluid" alt="temperature"></p>
               <div class="portfolio-info">
                 <h3>Temperature</h3>
                 <div>
-                  <a href="assets/img/LatTemp.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/LatTemp.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Temperature"><i class="bx bx-plus"></i></a>
                   <a href="visualization/temperature.html" title="Temperature"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -129,7 +130,7 @@
               <div class="portfolio-info">
                 <h3>Humidity</h3>
                 <div>
-                  <a href="assets/img/LatHum.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/LatHum.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Humidity"><i class="bx bx-plus"></i></a>
                   <a href="visualization/humidity.html" title="Humidity"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -142,7 +143,7 @@
               <div class="portfolio-info">
                 <h3>Cloud Cover</h3>
                 <div>
-                  <a href="assets/img/LatCloud.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/LatCloud.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Cloud Cover"><i class="bx bx-plus"></i></a>
                   <a href="visualization/cloudcover.html" title="Cloud Cover"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -155,7 +156,7 @@
               <div class="portfolio-info">
                 <h3>Wind Speed</h3>
                 <div>
-                  <a href="assets/img/LatWind.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/LatWind.png" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="Wind Speed"><i class="bx bx-plus"></i></a>
                   <a href="visualization/windspeed.html" title="Wind Speed"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -198,7 +199,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Site Pages</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
