--- a/Visualization_Dashboard/index.html
+++ b/Visualization_Dashboard/index.html
@@ -90,7 +90,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">WELCOME <br />Weather Visualization Dashboard</h2>
           <p class="animate__animated animate__fadeInUp">Visualize the weather from over 500 cities.</p>
-          <a href="about.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="compare.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -99,7 +99,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">It's about the Latitude</h2>
           <p class="animate__animated animate__fadeInUp">The latitude and longitude marks the spot.</p>
-          <a href="about" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="compare.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -108,7 +108,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Choose your Metric</h2>
           <p class="animate__animated animate__fadeInUp">Temperature, humidity, cloudiness, windspeed &mdash; or all of them &mdash; choose what is important for you.</p>
-          <a href="about" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="compare.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -131,7 +131,7 @@
 
         <div class="section-title">
           <h2>Welcome</h2>
-          <p>Explore the data where the ideal weather conditions exist for a future vacation. The data is based on latitude and longitude of 500+ randomly chosen cities showing the temperature, humidity, cloud cover, and wind speed based on latitude.</p>
+          <p>Explore the data where the ideal weather conditions exist for a future vacation. The data is based on latitude and longitude of 500+ randomly chosen cities showing the maximum temperature, humidity, cloud cover, and wind speed based on latitude.</p>
         </div>
 
 
@@ -216,7 +216,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Site Pages</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
