--- a/Visualization_Dashboard/visualization/humidity.html
+++ b/Visualization_Dashboard/visualization/humidity.html
@@ -88,15 +88,15 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Humidity</h3>
             <p class="font-italic">
-            A Python script was used to visualize the weather of 500+
-            randomly chosen cities across the world, at varying
-            distances from the equator. Out of the 601 randomly chosen
-            cities, only 547 were used in the analysis. The remaining
-            were eliminated due to incomplete data.        
+            A Python script was used to acquire a day's weather of 500+
+            randomly chosen cities, at varying
+            distances from the equator, across the world. Out of the 614 randomly chosen
+            cities, only 565 were used in the analysis. The others were
+            were eliminated due to incomplete data. 
             </p>
             <ul>
               <li><i class="bi bi-check2-circle"></i>There are more representative cities in the northern hemisphere, due to the northern hemisphere having more landmass.</li>
-               <li><i class="bi bi-check2-circle"></i>Generally, humidity levels (100% or less) greatly vary across the globe, though higher humidity levels are the majority (greater than 60%), especially in the latitudes between 30 and 70.
+               <li><i class="bi bi-check2-circle"></i>Generally, humidity levels (100% or less) greatly vary across the globe, though higher humidity levels are the majority (greater than 60%).
               <li><i class="bi bi-check2-circle"></i>The northern hemisphere tends to be more humid than the southern.</li>
             </ul>
           </div>
@@ -182,7 +182,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Site Pages</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="../index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="../about.html">About</a></li>
