--- a/Visualization_Dashboard/visualization/temperature.html
+++ b/Visualization_Dashboard/visualization/temperature.html
@@ -88,10 +88,10 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Maximum Temperature</h3>
             <p class="font-italic">
-            A Python script was used to visualize the weather of 500+
-            randomly chosen cities across the world, at varying
-            distances from the equator. Out of the 601 randomly chosen
-            cities, only 547 were used in the analysis. The remaining
+            A Python script was used to acquire a day's weather of 500+
+            randomly chosen cities, at varying
+            distances from the equator, across the world. Out of the 614 randomly chosen
+            cities, only 565 were used in the analysis. The others were
             were eliminated due to incomplete data. 
   </p>
             <ul>
@@ -182,7 +182,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Site Pages</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="../index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="../about.html">About</a></li>
