minor additions to web site

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h3>Visualization &amp; Storytelling</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+									<p>In development. </p>
 								</div>
 							</div>
 						</div>
@@ -114,7 +114,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h3>Simulating Efficiency</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+									<p>In development. </p>
 								</div>
 							</div>
 						</div>
@@ -126,7 +126,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h3>Leadership &amp; Strategy</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+									<p>In development. </p>
 								</div>
 							</div>
 						</div>
@@ -137,7 +137,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h3>Sustainability &amp; Wellness</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+									<p>In development. </p>
 								</div>
 							</div>
 						</div>
