--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
 				
 				<div class="row">
 					<div class="col-md-4">
-						<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Projects</h2>
+						<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Contact &amp; Connect</h2>
 					</div>
 				</div>
 				<form action="">
