--- a/index.html
+++ b/index.html
@@ -206,16 +206,14 @@
 				<div class="fh5co-narrow-content">
 					<div class="row">
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Contact & Connect</h2>
+							<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Contact &amp; Connect</h2>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
-							data-animate-effect="fadeInLeft">
+						<div class="col-md-4 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<p class="fh5co-lead">Connect for more information.</p>
 							<a href="contact.html" class="btn btn-primary">Contact</a>
 						</div>
-
 					</div>
 				</div>
 			</div>
