updated with project 3

--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,14 @@
 				<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Projects</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://klharp.github.io/Project-3-EmissionsPredictor/" target="_blank" class="work image-popup" style="background-image: url(images/predictor.png);">
+							<div class="desc">
+								<h3>Project 3: Carbon Emissions Predictor</h3>
+								<span>This project uses machine learning to determine the predictability of carbon emissions in the transportation sector if trends in person vehicle and public transportation continues.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
 						<a href="https://klharp.github.io/Project-2-Neighborhoods-Dashboard-Live/templates/" target="_blank" class="work image-popup" style="background-image: url(images/neighborhoods.png);">
 							<div class="desc">
 								<h3>Project 2: Health Neighborhoods Dashboard</h3>
