--- a/about.html
+++ b/about.html
@@ -64,6 +64,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
+					<li><a href="publications.html">Presentations &amp; Publications</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
