--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Kerry Harp, visualizing a sustainable world" />
 	<meta name="keywords"
-		content="Kerry Harp, data analysis, visualization, energy-efficiency, sustainability, wellbeing" />
+		content="Kerry Harp, Kerry Haglund, data analysis, visualization, energy-efficiency, sustainability, wellbeing, WELL Building Standard, LEED, Fitwel" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -27,7 +27,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image.png" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Mukta+Mahee" rel="stylesheet">
@@ -66,6 +66,8 @@
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
+					<li><a href="publications.html">Presentations &amp; Publications</a></li>
+
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -104,13 +106,16 @@
 								</div>
 							</div>
 						</li>
-						<li style="background-image: url(images/img_bg_2.jpg);">
+						<li style="background-image: url(images/img_bg_3.jpg);">
 							<div class="overlay"></div>
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h1>Visualizing A Sustainable World</h1>
+											<h1>Consultant</h1>
+											<h1>Designer</h1>
+											<h1>Data Analyst</h1>
+
 											<h2>Kerry Harp</h2>
 											<h3>LEED AP BD+C, WELL AP, Fitwel Ambassador</h3>
 											<p><a class="btn btn-primary btn-demo " href="about.html"> About </a> <a
@@ -121,13 +126,13 @@
 								</div>
 							</div>
 						</li>
-						<li style="background-image: url(images/img_bg_3.jpg);">
+						<li style="background-image: url(images/img_bg_2.jpg);">
 							<div class="overlay"></div>
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h1>Visualizing A Sustainable World</h1>
+											<h1>Promoting Sustainability, Health, &amp Wellbeing in the Built Environment</h1>
 											<h2>Kerry Harp</h2>
 											<h3>LEED AP BD+C, WELL AP, Fitwel Ambassador</h3>
 											<p><a class="btn btn-primary btn-demo " href="about.html"> About </a> <a
