--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="publications.html">Presentations &amp; Publications</a></li>
+					<li><a href="publications.html">Presentations &amp;<br> Publications</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -90,7 +90,7 @@
 							alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-						<h2 class="fh5co-heading">About Kerry Harp and Harp Design, Inc.</h2>
+						<h2 class="fh5co-heading">About Kerry Harp</h2>
 						<p class="fh5co-lead">
 							Consultant, designer, visualization and data analyst with experience working in the areas of
 							sustainability in the built environment and the health/wellbeing of building occupants. With
