--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li class="fh5co-active"><a href="projects.html">Projects</a></li>
-					<li><a href="publications.html">Presentations &amp; Publications</a></li>
+					<li><a href="publications.html">Presentations &amp;<br> Publications</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -240,7 +240,6 @@
 							</div>
 						</a>
 					</div>
-
 				</div>
 			</div>
 
@@ -281,12 +280,7 @@
 					</div>
 				</div>
 			</div>
-
-
-
 		</div>
-	</div>
-	</div>
 	</div>
 
 	<!-- jQuery -->
