--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="publications.html">Presentations &amp; Publications</a></li>
+					<li><a href="publications.html">Presentations &amp;<br> Publications</a></li>
 
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
