--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li class="fh5co-active"><a href="publications.html">Presentations &amp; Publications</a></li>
+					<li class="fh5co-active"><a href="publications.html">Presentations &amp;<br> Publications</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
