--- a/projects.html
+++ b/projects.html
@@ -107,6 +107,16 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="ewc.html" class="work image-popup"
+							style="background-image: url(images/wst3.png);">
+							<div class="desc">
+								<h3>Efficient Windows Collaborative</h3>
+								<span>Website and Window Selection Tool to promote energy-efficient fenestration
+									products</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
 						<a href="https://github.com/klharp/Project-1-Hypothesis-Testing" target="_blank"
 							class="work image-popup" style="background-image: url(images/happiness.png);">
 							<div class="desc">
