added regression project

--- a/projects.html
+++ b/projects.html
@@ -107,6 +107,16 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://github.com/klharp/Regression_Analysis"
+							target="_blank" class="work image-popup"
+							style="background-image: url(images/regress.png);">
+							<div class="desc">
+								<h3>Mulitvariable Regression Analysis</h3>
+								<span>Analysis comparing the results of EnergyPlus v9.2 and v9.5 after the solar absorptance bug was fixed.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
 						<a href="ewc.html" class="work image-popup"
 							style="background-image: url(images/wst3.png);">
 							<div class="desc">
@@ -127,7 +137,7 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://github.com/klharp/plotly-challenge" target="_blank" class="work image-popup"
+						<a href="https://klharp.github.io/plotly-challenge/" target="_blank" class="work image-popup"
 							style="background-image: url(images/plotly.png);">
 							<div class="desc">
 								<h3>Bootcamp Plotly Challenge</h3>
