--- a/projects.html
+++ b/projects.html
@@ -107,12 +107,12 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://github.com/klharp/Regression_Analysis"
+						<a href="https://klharp.github.io/EPlus_Scraper_Maine/index.html"
 							target="_blank" class="work image-popup"
-							style="background-image: url(images/regress.png);">
+							style="background-image: url(images/mg_sample.png);">
 							<div class="desc">
-								<h3>Mulitvariable Regression Analysis</h3>
-								<span>Analysis comparing the results of EnergyPlus v9.2 and v9.5 after the solar absorptance bug was fixed.</span>
+								<h3>Visualizing EnergyPlus Output Data</h3>
+								<span>Ongoing project to scrap, gather,  analyze, and visualize energy simulations.</span>
 							</div>
 						</a>
 					</div>
@@ -143,6 +143,16 @@
 								<h3>Bootcamp Plotly Challenge</h3>
 								<span>Built an interactive dashboard to explore a given dataset. D3, Plotly, Javascript,
 									HTML, and CSS were used in this exercise.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://github.com/klharp/Regression_Analysis"
+							target="_blank" class="work image-popup"
+							style="background-image: url(images/regress.png);">
+							<div class="desc">
+								<h3>Mulitvariable Regression Analysis</h3>
+								<span>Analysis comparing the results of EnergyPlus v9.2 and v9.5 after the solar absorptance bug was fixed.</span>
 							</div>
 						</a>
 					</div>
